Mobile text fixed - Label alignment for time

--- a/components/domains/experience/ExperienceTimeline/styles.module.scss
+++ b/components/domains/experience/ExperienceTimeline/styles.module.scss
@@ -17,6 +17,8 @@
     padding-top: 0.15rem;
     padding-bottom: 0.2rem;
     font-weight: 600;
+    display: inline-flex;
+    align-items: center;
 
     &:global(.label) {
       color: #fff;
