--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -83,7 +83,8 @@
 
   .content {
     width: 100%;
-    // margin-top: auto;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
   .subcontentTitle {
@@ -164,20 +165,6 @@
 
 @media (max-width: $size-md - 1) {
   .about {
-
-    .profile {
-      margin-top: 0;
-      flex-grow: 1;
-      justify-content: flex-start;
-
-      &::before {
-        content: '';
-        min-height: 0;
-        flex-grow: 1;
-        max-height: 10%;
-        display: block;
-      }
-    }
 
     .projectCarousel {
       padding-right: 0;
